fixed filter error overflowing

--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -296,6 +296,10 @@ Profile Page CSS
   width: 90%;
 }
 
+.error-div {
+  word-wrap: break-word
+}
+
 .filter-error {
   color: red;
   font-weight: bold;
